--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@
     padding: 50px 35px;
     text-align: center;
     border-radius: 5px;
+    backdrop-filter: blur(3px);
     background-color: rgb(255, 255,255,0.2);
     border: 2px solid rgb(255, 255,255,0.3);
 }
